# schemaorg-arc-builder

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ENV_README.md  LICENSE  README.md  arc_creator.py  check_xlsx.py  demo_limit_functionality.py  gitlab_submit.py  gitlab_submitter.py  list_projects.py  main.py  pyproject.toml  setup.py  test_limit_feature.py  test_limit_integration.py  test_limit_verification.py  verify_limit.py
.github/workflows/: ci.yml
config/: .env  .env.dev  .env.prod
examples/: bonares.json  edal.json  example_bonares.json  example_edal.json  example_openagrar.json  example_plabipd.json  example_publisso.json  example_with_grant.json  openagrar.json  plabipd.json  publisso.json
output_crates/bonares_arc/: ro-crate-metadata.json
output_crates/bonares_arc/arc/: arc_structure.json  isa.investigation.xlsx
output_crates/bonares_arc/test_beta/: isa.investigation.xlsx
output_crates/bonares_arc/test_bonares/: isa.investigation.xlsx
output_crates/bonares_arc/test_structure/: isa.investigation.xlsx
output_crates/edal_arc/: ro-crate-metadata.json
output_crates/edal_arc/Physiologische_und_bioanalytische_Untersuchungen_während_der_Pollenembryogenese_von_Hordeum_vulgare/: isa.investigation.xlsx
output_crates/edal_arc/arc/: arc_structure.json  isa.investigation.xlsx
output_crates/openagrar_arc/: ro-crate-metadata.json
output_crates/openagrar_arc/arc/: arc_structure.json  isa.investigation.xlsx
output_crates/plabipd_arc/: ro-crate-metadata.json
output_crates/publisso_arc/: ro-crate-metadata.json
schemaorg_arc_builder/: __init__.py  __main__.py  rocrate_builder.py
schemaorg_rocrate_parser/: __main__.py  parser.py  rocrate_builder.py
scripts/: README.md  arc_creator.py  gitlab_submit.py  gitlab_submitter.py
scripts/harvest/: github_harvester.py  harvest_and_process.py
scripts/process/: arc_creator.py
scripts/submit/: gitlab_submit.py
scripts/utils/: cleanup.py  test_harvester_config.py
tests/: README.md  conftest.py  inspect_investigation.py  test_integration.py  test_parser.py  test_rocrate_builder.py
tests/test_data/: README.md  sample_metadata.json
(+5 files in other folders)
