[project]
name = "schemaorg-rocrate-parser"
version = "0.1.0"
description = "Parse schema.org JSON-LD metadata into ISA RO-Crate structure"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rocrate>=0.10.0",
    "rdflib>=7.0.0",
    "pyld>=2.0.0",
    "arctrl>=3.0.0b13",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
